Completed signal handler and Chapter 1. Up next: Chapter 2.

--- a/ch01/Makefile
+++ b/ch01/Makefile
@@ -2,7 +2,7 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = ls1 mycat getcputc hello shell1 testerror
+PROGS = ls1 mycat getcputc hello shell1 testerror uidgid shell2
 
 all:	$(PROGS)
 
