Completed Chapter 3. Up next: Chapter 4.

--- a/ch03/Makefile
+++ b/ch03/Makefile
@@ -2,14 +2,14 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = seek hole mycat
+PROGS = seek hole mycat fileflags
 
-all:	$(PROGS)
+all:	$(PROGS) setfl.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
 
 clean:
-	rm -f $(PROGS) $(TEMPFILES) *.o
+	rm -f $(PROGS) $(TEMPFILES) *.o file.hole
 
 include $(ROOT)/Make.libapue.inc
