--- a/ch04/Makefile
+++ b/ch04/Makefile
@@ -8,7 +8,7 @@ else
 	ZAP =
 endif
 
-PROGS = filetype access umask
+PROGS = filetype access umask changemod
 MOREPROGS =
 
 all:	$(PROGS) $(MOREPROGS)
