Completed implementation of cdpwd, mycd and devrdev. Updated Sublime Linter settings for Sublime project.

--- a/ch04/Makefile
+++ b/ch04/Makefile
@@ -8,7 +8,7 @@ else
 	ZAP =
 endif
 
-PROGS = filetype access umask changemod unlink $(ZAP)
+PROGS = filetype access umask changemod unlink $(ZAP) mycd cdpwd devrdev
 MOREPROGS = ftw8
 
 all:	$(PROGS) $(MOREPROGS)
