Removed redundant include in devrdev.c & updated ch05 Makefile to ublid no Linux.

--- a/ch05/Makefile
+++ b/ch05/Makefile
@@ -3,7 +3,8 @@ PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
 ifeq "$(PLATFORM)" "linux"
-	MEMSTR = MEMSTR
+#	MEMSTR = MEMSTR
+	MEMSTR =
 else
 	MEMSTR =
 endif
