--- a/ch08/Makefile
+++ b/ch08/Makefile
@@ -2,7 +2,7 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = 
+PROGS = fork1 vfork1
 
 all:	$(PROGS) 
 
