--- a/ch10/Makefile
+++ b/ch10/Makefile
@@ -2,7 +2,7 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = sigusr
+PROGS = sigusr reenter
 
 all:	$(PROGS)
 
