Implemented abort function.

--- a/ch10/Makefile
+++ b/ch10/Makefile
@@ -14,13 +14,13 @@ endif
 PROGS = sigusr reenter $(CLD) read1 read2 critical mask suspend1 suspend2
 MOREPROGS = tsleep2
 
-all:	$(PROGS) $(MOREPROGS) sleep1.o sleep2.o
-
-tsleep2:	tsleep2.o sleep2.o $(LIBAPUE)
-	$(CC) $(CFLAGS) -o tsleep2 tsleep2.o sleep2.o $(LDFLAGS) $(LDLIBS)
+all:	$(PROGS) $(MOREPROGS) sleep1.o sleep2.o abort.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
+
+tsleep2:	tsleep2.o sleep2.o $(LIBAPUE)
+	$(CC) $(CFLAGS) -o tsleep2 tsleep2.o sleep2.o $(LDFLAGS) $(LDLIBS)
 
 clean:
 	rm -f $(PROGS) $(MOREPROGS) $(TEMPFILES) *.o $(CLD)
