Implemented badexit and cleanup demo programs.  Thread synchronisation next.

--- a/ch11/Makefile
+++ b/ch11/Makefile
@@ -24,7 +24,7 @@ ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lpthread -ltr
 endif
 
-PROGS = threadid exitstatus badexit2
+PROGS = threadid exitstatus badexit2 cleanup
 
 all:	$(PROGS) $(TLOCK) $(BAR)
 
