Implemented improved mutex examples, timedlock example and reader-writer example.

--- a/ch11/Makefile
+++ b/ch11/Makefile
@@ -9,7 +9,7 @@ ifeq "$(PLATFORM)" "macos"
 	TLOCK =
 	EXTRALIBS = -pthread
 else
-	TLOCK =
+	TLOCK = timedlock
 endif
 ifeq "$(PLATFORM)" "linux"
 	BAR =
@@ -26,7 +26,7 @@ endif
 
 PROGS = threadid exitstatus badexit2 cleanup
 
-all:	$(PROGS) mutex1.o mutex2.o $(TLOCK) $(BAR)
+all:	$(PROGS) mutex1.o mutex2.o mutex3.o rwlock.o $(TLOCK) $(BAR)
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
