Implemented timeout example to demonstrate recursive mutex.

--- a/ch12/Makefile
+++ b/ch12/Makefile
@@ -6,13 +6,13 @@ TOUT =
 ifeq "$(PLATFORM)" "freebsd"
 	EXTRALIBS = -pthread
 endif
-ifeq "$(PLATFOMR)" "linux"
+ifeq "$(PLATFORM)" "linux"
 	EXTRALIBS = -pthread
-	TOUT =
+	TOUT = timeout.o
 endif
 ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lpthread
-	TOUT =
+	TOUT = timeout.o
 endif
 
 PROGS =
