Implemented single daemon function.

--- a/ch13/Makefile
+++ b/ch13/Makefile
@@ -2,7 +2,7 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-all:	init.o
+all:	init.o single.o
 
 clean:
 	rm -f $(TEMPFILES) *.o
