Implemented lockfile program and mandatory locking example.

--- a/ch14/Makefile
+++ b/ch14/Makefile
@@ -9,10 +9,10 @@ ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lrt
 endif
 
-PROGS = nonblockw deadlock
+PROGS = nonblockw deadlock mandatory
 MOREPROGS =
 
-all:	$(PROGS) $(MOREPROGS)
+all:	$(PROGS) $(MOREPROGS) lockfile.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
