--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,7 +7,8 @@ include $(ROOT)/Make.defines.$(PLATFORM)
 
 LIBMISC = libapue.a
 OBJS = error.o pathalloc.o openmax.o setfl.o clrfl.o prexit.o tellwait.o \
-		signal.o prmask.o signalintr.o daemonize.o lockreg.o locktest.o
+		signal.o prmask.o signalintr.o daemonize.o lockreg.o locktest.o \
+		readn.o writen.o
 
 all:	$(LIBMISC) sleep.o
 
