Completed pipes and coprocesses.  Up next: FIFOs.

--- a/ch15/Makefile
+++ b/ch15/Makefile
@@ -2,9 +2,9 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = pipe1 pipe2
+PROGS = pipe1 pipe2 popen2 myuclc popen1 add2 pipe4 add2stdio
 
-all:	$(PROGS) tellwait.o
+all:	$(PROGS) tellwait.o popen.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
