Completed IPC. Next is Network IPC: Sockets.

--- a/ch15/Makefile
+++ b/ch15/Makefile
@@ -2,12 +2,14 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = pipe1 pipe2 popen2 myuclc popen1 add2 pipe4 add2stdio
+PROGS = pipe1 pipe2 popen2 myuclc popen1 add2 pipe4 add2stdio tshm devzero
 
-all:	$(PROGS) tellwait.o popen.o
+all:	$(PROGS) tellwait.o popen.o slock.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
+
+slock.o:	slock.c slock.h
 
 clean:
 	rm -f $(PROGS) $(TEMPFILES) *.o
