Updated .clang_complete to include clang 4.0.0 for FreeBSD.  Implemented ruptime client.

--- a/ch16/Makefile
+++ b/ch16/Makefile
@@ -6,12 +6,15 @@ ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lsocket -lnsl
 endif
 
-PROGS =
+PROGS = ruptime
 MOREPROGS = findsvc
 
 all:	$(PROGS) $(MOREPROGS) clconn.o clconn2.o initsrv1.o
 
 %:	%.c $(LIBAPUE)
+
+ruptime:	ruptime.o clconn2.o $(LIBAPUE)
+	$(CC) $(CFLAGS) -o ruptime ruptime.o clconn2.o $(LDFLAGS) $(LDLIBS)
 
 clean:
 	rm -f $(PROGS) $(MOREPROGS) $(TEMPFILES) *.o
