Reordered clang include files directive.  Implemented ruptime client and server programs.

--- a/ch16/Makefile
+++ b/ch16/Makefile
@@ -6,15 +6,21 @@ ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lsocket -lnsl
 endif
 
-PROGS = ruptime
+PROGS = ruptime ruptimed ruptimed-fd
 MOREPROGS = findsvc
 
-all:	$(PROGS) $(MOREPROGS) clconn.o clconn2.o initsrv1.o
+all:	$(PROGS) $(MOREPROGS) clconn.o clconn2.o initsrv1.o initsrv2.o
 
 %:	%.c $(LIBAPUE)
 
 ruptime:	ruptime.o clconn2.o $(LIBAPUE)
 	$(CC) $(CFLAGS) -o ruptime ruptime.o clconn2.o $(LDFLAGS) $(LDLIBS)
+
+ruptimed:	ruptimed.o initsrv2.o $(LIBAPUE)
+	$(CC) $(CFLAGS) -o ruptimed ruptimed.o initsrv2.o $(LDFLAGS) $(LDLIBS)
+
+ruptimed-fd:	ruptimed-fd.o initsrv2.o $(LIBAPUE)
+	$(CC) $(CFLAGS) -o ruptimed-fd ruptimed-fd.o initsrv2.o $(LDFLAGS) $(LDLIBS)
 
 clean:
 	rm -f $(PROGS) $(MOREPROGS) $(TEMPFILES) *.o
