Implemented connectionless (datagram) client and server.

--- a/ch16/Makefile
+++ b/ch16/Makefile
@@ -6,8 +6,8 @@ ifeq "$(PLATFORM)" "solaris"
 	EXTRALIBS = -lsocket -lnsl
 endif
 
-PROGS = ruptime ruptimed ruptimed-fd
-MOREPROGS = findsvc
+PROGS = ruptime ruptimed ruptimed-fd ruptimed-dg
+MOREPROGS = findsvc ruptime-dg
 
 all:	$(PROGS) $(MOREPROGS) clconn.o clconn2.o initsrv1.o initsrv2.o
 
@@ -21,6 +21,9 @@ ruptimed:	ruptimed.o initsrv2.o $(LIBAPUE)
 
 ruptimed-fd:	ruptimed-fd.o initsrv2.o $(LIBAPUE)
 	$(CC) $(CFLAGS) -o ruptimed-fd ruptimed-fd.o initsrv2.o $(LDFLAGS) $(LDLIBS)
+
+ruptimed-dg:	ruptimed-dg.o initsrv2.o $(LIBAPUE)
+	$(CC) $(CFLAGS) -o ruptimed-dg ruptimed-dg.o initsrv2.o $(LDFLAGS) $(LDLIBS)
 
 clean:
 	rm -f $(PROGS) $(MOREPROGS) $(TEMPFILES) *.o
