Added Ubuntu/Kubuntu include paths previously removed for Solus Linux.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "signal.h": "c",
         "apue.h": "c",
         "stddef.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "stat.h": "c"
     }
 }
