Implemented ttyname and getpass.

--- a/ch18/Makefile
+++ b/ch18/Makefile
@@ -2,9 +2,9 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = settty csize t_isatty
+PROGS = settty csize t_isatty t_ttyname t_getpass
 
-all:	$(PROGS) ctermid.o isatty.o ttyname.o
+all:	$(PROGS) ctermid.o isatty.o ttyname.o getpass.o
 
 %:	%.c $(LIBAPUE)
 	$(CC) $(CFLAGS) $@.c -o $@ $(LDFLAGS) $(LDLIBS)
@@ -13,3 +13,4 @@ clean:
 	rm -f $(PROGS) $(TEMPFILES) *.o
 
 include $(ROOT)/Make.libapue.inc
+
