--- a/ch18/Makefile
+++ b/ch18/Makefile
@@ -2,7 +2,7 @@ ROOT=..
 PLATFORM=$(shell $(ROOT)/systype.sh)
 include $(ROOT)/Make.defines.$(PLATFORM)
 
-PROGS = settty csize t_isatty t_ttyname t_getpass
+PROGS = settty csize t_isatty t_ttyname t_getpass t_raw winch
 
 all:	$(PROGS) ctermid.o isatty.o ttyname.o getpass.o
 
