Fixed db library Makefile to build correctly with clang on FreeBSD.

--- a/ch20/Makefile
+++ b/ch20/Makefile
@@ -21,10 +21,10 @@ ifeq "$(PLATFORM)" "linux"
   EXTRALD=-Wl,-rpath=.
 endif
 ifeq "$(PLATFORM)" "freebsd"
-  EXTRALD=-R.
+	EXTRALD=-Wl,-rpath=.
 endif
 ifeq "$(PLATFORM)" "openbsd"
-  EXTRALD=-R.
+  EXTRALD=-Wl,-rpath=.
 endif
 ifeq "$(PLATFORM)" "macos"
   EXTRALD=-R.
