Started implementing print program header.  Updated clang configuration files for clang 6.0.0 on Linux.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "apue.h": "c",
         "stddef.h": "c",
         "time.h": "c",
-        "stat.h": "c"
+        "stat.h": "c",
+        "system_error": "c"
     }
 }
