Started implementing the printer spooler daemon.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "stddef.h": "c",
         "time.h": "c",
         "stat.h": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "strings.h": "c"
     }
 }
